syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package="com.example.kafkaconsumer.schema";
package com.example.kafkaconsumer;

message MessageDTO{
  int64 id = 1;
  string to = 2;
  string toName = 3;
  string content = 4;
}
message nullParams{}
message getMessageByIdParams{
  int64 id = 1;
}
service MessService{
  rpc getAllMess(google.protobuf.Empty) returns (stream MessageDTO);
  rpc getMessageById(getMessageByIdParams) returns (MessageDTO);
}